# dectSandbox

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  launch.vs.json
.devcontainer/: Dockerfile
.github/: settings.yaml
.github/workflows/: checks.yml  cmake.yml
ULE-StarterKit-v1.0/: CHANGELOG.adoc
ULE-StarterKit-v1.0/base/: .gitignore
ULE-StarterKit-v1.0/base/tools/: cmbs_tcx.linux-amd64  cmbs_tcx.linux-arm
ULE-StarterKit-v1.0/base/ule-hub/: han_app.py  han_client.py  lint.py  requirements.txt  test_han_client.py
ULE-StarterKit-v1.0/device/: .gitignore
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/: .gitignore
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/Alert/: readme.txt
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/Alert/Inc/: main.h  main_extern.h
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/Alert/SW4STM32/: .cproject  .project
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/Alert/Src/: AppExample.c  main.c
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/RawData/: readme.txt
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/RawData/Inc/: main.h
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/RawData/SW4STM32/: .cproject  .mxproject  .project
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/RawData/Src/: AppExample.c
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/Register/: readme.txt
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/Register/SW4STM32/: .cproject  .project
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/Register/Src/: AppExample.c
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/Support/: CmndLib_UserImpl.c  CmndLib_UserImpl_StringUtil.c  log.c  log.h  stm32l4xx_hal_conf.h  stm32l4xx_hal_msp.c  stm32l4xx_it.c  stm32l4xx_it.h  syscalls.c
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/VoiceCall/: readme.txt
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/VoiceCall/Inc/: main.h
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/VoiceCall/SW4STM32/: .cproject  .project
ULE-StarterKit-v1.0/device/Examples/STM32L476RG-Nucleo/VoiceCall/Src/: AppExample.c  main.c
ULE-StarterKit-v1.0/device/Utilities/: .gitignore
ULE-StarterKit-v1.0/device/uleasy/: LICENSE  README.md
ULE-StarterKit-v1.0/device/uleasy/CmndLib/: CmndLib.h  CmndLib_UserImpl.h
ULE-StarterKit-v1.0/device/uleasy/CmndLib/include/: CmndApiHost.h  CmndApiPacket.h  CmndApiStringUtil.h  CmndMsg_AttributeReporting.h  CmndMsg_DeviceManagement.h  CmndMsg_General.h  CmndMsg_KeepAlive.h  CmndMsg_OnOff.h  CmndMsg_Parameters.h  CmndMsg_Production.h  CmndMsg_System.h  CmndMsg_Tamper.h  CmndPacketCreator.h  CmndPacketDetector.h  CmndVersion.h
ULE-StarterKit-v1.0/device/uleasy/CmndLib/src/: CmndApiIe.c  CmndApiPacket.c  CmndMsg.c  CmndMsg_General.c  CmndMsg_Production.c  CmndMsg_Suota.c  CmndMsg_System.c  CmndPacketCreator.c  CmndPresetUtils.c  CmndToString.c  Endian.c  StreamBuffer.c
ULE-StarterKit-v1.0/fwtool/: .gitignore  Makefile  README.adoc  cmbs.py  cmnd.py  fwtool.py  pylama.ini  requirements.txt  test_cmbs.py  test_cmnd.py  test_fwtool.py
ULE-StarterKit-v1.0/fwtool/scripts/: du-eb-audiofixup-toexe.py  du-eb-audiofixup.py
apps/: CMakeLists.txt
apps/_template/: CMakeLists.txt  main.cpp
apps/simpleDect/: CMakeLists.txt  main.cpp
cmake/: deps_cpm.cmake  setup_cpm.cmake  stacktrace.cmake
libs/: CMakeLists.txt
libs/CmndLib/: CMakeLists.txt  CmndLib_Config.h  CmndLib_UserImpl_StringUtil.h
libs/CmndLib/include/: CmndApiExported.h  CmndApiIe.h  CmndLibData.h  CmndMsg.h  CmndMsgLog.h  CmndMsg_Alert.h  CmndMsg_Fun.h  CmndMsg_Suota.h  CmndMsg_VoiceCall.h  CmndPacketParser.h  CmndPresetDefs.h  CmndPresetUtils.h  CmndToString.h  Endian.h  FunProfiles.h  FunProprietary.h  IeList.h  Logger.h  StreamBuffer.h  TypeDefs.h
libs/CmndLib/src/: CmndApiStringUtil.c  CmndMsgLog.c  CmndMsg_Alert.c  CmndMsg_AttributeReporting.c  CmndMsg_DeviceManagement.c  CmndMsg_Fun.c  CmndMsg_KeepAlive.c  CmndMsg_OnOff.c  CmndMsg_Parameters.c  CmndMsg_Tamper.c  CmndMsg_VoiceCall.c  CmndPacketDetector.c  CmndPacketParser.c  IeList.c
libs/pigpio/: CMakeLists.txt  README.md
libs/rawDataExampleLib/: CMakeLists.txt
libs/rawDataExampleLib/core/: lib.cpp  lib.hpp  main_extern.h
libs/sampleLib/: CMakeLists.txt
libs/sampleLib/core/: lib.cpp  lib.hpp
tests/: CMakeLists.txt  testMain.cpp
tests/Sample/: SampleTests.cpp
